Fixed vertical alignment of emote and badges boxes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ canvas, img {
 .images {
     margin: 0;
     display: inline-block;
+    vertical-align: top;
 }
 
 .image-set {
